# kreusada

./: .gitignore  Makefile  README.md  c.c  liguor.delta  liquor.y  requirements.txt  ruby.rb  setup.cfg  setup.py  something.di  testing.mir  yacc.y
kreusada/: __init__.py  box.py  chat_formatting.py  decorators.py  embed.py  internals.py  numerics.py  random.py  tags.py  tests.py  urls.py  utils.py
kreusada/internals/: tags.py
kreusada/utils/: chat_formatting.py  codeblocks.py  embed.py  random.py  tags.py  urls.py
kreusada/utils/data/: consumables.yaml
kreusada/utils/datalists/: consumables.yaml  fruit_plural.yaml  fruit_singular.yaml  veg_plural.yaml  veg_singular.yaml
