[metadata]
name = kreusada
version = 0.0.1
url = https://github.com/kreus7/kreusada
author = Kreusada
author_email = kreusadaprojects@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
description = A pypi package, with utils for Red-DiscordBot.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8